assets/css/less/wpbdp.less
/* ... */
#wpbdp-search-form .wpbdp-search-filter > div.field > input[type="text"] {
	box-sizing: border-box;
	width: 90%;
}

#wpbdp-search-form .wpbdp-search-filter > div.field > select {
	box-sizing: border-box;
	width: 90%;
}

#wpbdp-search-form input[type="submit"] {
	margin: auto;
	float: none;
}

.wpbdp-pagination {
	margin: 25px 0 0 0;
}

.wpbdp-pagination .next {
	float: right;
}

/* listing views */
.listing-actions form {
	display: inline;
	padding: 0;
	margin: 0;
}

.listing-actions input {
	margin: 0 0 5px;
	font-size: 80%;
}

.wpbdp-with-button-styles .wpbdp-listing .listing-actions .wpbdp-button.delete-listing,
.listing-actions .delete-listing,
.listing-actions a.delete-listing {
	border-color: transparent !important;
	background-color: transparent !important;
	color: @red !important;
}

.listing-actions a.button {
	padding: 5px 10px;
	margin-right: 3px;
	font-size: 11px;
	text-decoration: none;
}

.listing-actions > span,
.listing-actions > a {
	margin-left: 10px;
	font-size: 11px;
}

.wpbdp-listing .listing-details .field-value {
	width: 100%;
	margin-bottom: 10px;
	float: none;
}

.wpbdmsingledetails .singledetailsview .field-value {
	margin-bottom: 10px;
}

.field-value label,
.field-value .field-label {
	padding-right: 5px;
	color: #444;
	font-weight: 700;
}

.field-value .value {
	display: inline;
}

/* listing view > excerpt */
.wpbdp-listing-excerpt {
	padding: 10px;

	.wpbdp-hide-title .listing-details .wpbdp-field-title,
	.wpbdp-hide-title .listing-details .wpbdp-field-name {
		display: none;
	}
}

.wpbdp-listing-excerpt.sticky {
	background: #fff0cf;
	background: var(--bd-main-color-8);
	position: relative;
}

.wpbdp-listing-excerpt .listing-thumbnail {
	margin: 0;
	float: right;
}

.wpbdp-listing-excerpt .listing-actions {
	margin-top: 15px;
}

/* listing views > single */
.wpbdp-listing-single .listing-actions {
	margin-bottom: 25px;
}

.wpbdp-listing-single.sticky {
	margin-top: 30px;
	position: relative;
}

.wpbdp-listing-excerpt,
.wpbdp-listing-single {

	.stickytag {
		margin-top: -20px;
		float: right;

		img {
			max-height: 102px;
			border: 0;
			background: transparent;
			box-shadow: none;
		}
	}
}

.wpbdp-listing-single .stickytag {
	position: absolute;
	right: 0;
	bottom: 0;
}

.wpbdp-sticky-tag {
	display: inline-block;
	border-radius: 4px;
	padding: 6px 15px;
	margin: 0 15px;
	background: var(--bd-main-color);
	color: #fff;
	font-size: 12px;
	font-weight: 600;
	text-transform: uppercase;
	vertical-align: middle;
}

.wpbdp-is-table .wpbdp-listing-excerpt > .wpbdp-sticky-tag {
	display: none !important;
}

.wpbdp-listing-excerpt {

	.wpbdp-sticky-tag {
		margin-top: 10px;
		margin-right: 0;
		float: right;
	}
}

.wpbdp-listing-excerpt.wpbdp-has-ribbon {
	position: relative;
	overflow: hidden;

	.wpbdp-sticky-tag {
		position: absolute;
		top: 12px;
		right: -48px;
		width: 150px;
		border-radius: 0;
		margin: 0;
		text-align: center;
		transform: rotate(45deg);
	}

	.wpbdp-claim-listings {
		display: none;
	}
}

.wpbdp-listing-single .listing-title {
	display: none; /* Prevent duplicate title with custom templates */

	&.show-listing-title {
		display: block;
	}
}

.wpbdp-listing-single .main-image {
	padding: 5px;
	margin-left: 10px;
	float: right;

	a {
		position: relative !important;
	}

	img {
		border: solid 1px @gray;
	}
}

.single-wpbdp_listing .extra-images,
.wpbdp-listing-single .extra-images {
	margin-top: 10px;
	clear: both;

	ul {
		width: 100%;
		padding: 0;
		margin: 0 auto;

		li {
			display: inline-block;
			margin-bottom: 5px;
			margin-left: 5px;
			list-style-type: none;

			img {
				display: inline;
				max-width: 150px;
				border: solid 1px @gray;
				margin: 0 auto;
				vertical-align: top;
			}
		}
	}

}

/* social fields */

.single-wpbdp_listing .social-fields,
.wpbdp-listing .social-fields {
	margin: 20px 0;
	vertical-align: top;
}

.social-field-link,
.single-wpbdp_listing .social-field,
.wpbdp-listing .social-field {
	display: inline-block;
	height: 20px;
	margin-right: 10px;
	vertical-align: text-top;

	iframe {
		margin-bottom: 0;
	}

	img {
		vertical-align: initial;
	}

	.social-icon {
		display: inline-block;
		background-color: transparent;
		color: #1a1a1a;
	}

	.social-text {
		font-size: 90%;
	}

	a {
		box-shadow: none;

		img {
			width: auto;
			height: 20px;
		}

		object {
			height: 20px;
			margin-bottom: 0;

		}
	}

	&.icon_first {

		.social-icon {
			margin-right: 5px;
		}
	}

	&.text_first {

		.social-text {
			margin-right: 5px;
		}
	}

}

.wpbdp-listing-contact-form {
	padding-top: 20px;
	margin-top: 20px;

	#wpbdp-contact-form-recaptcha {
		margin-bottom: 20px;
	}
}

.wpbdp-listing-contact-form textarea {
	width: 100%;
}

/* listing comments form */
.wpbdp-listing .comments {
	margin-top: 20px;
}

/* pages toolbar */
.wpbdp-bar .wpbdp-search-form {
	padding: 0 !important;
	margin: 0;
	margin-left: 50%;
}

.wpbdp-bar .left {
	text-align: center;
	float: left;
}

.wpbdp-bar .right {
	width: 300px;
	float: right;
}

/* sort options */
.wpbdp-listings-sort-options {
	margin: 5px 0 10px;
	font-size: 90%;

	label {
		font-weight: 400;
	}

	select {
		margin: 0 4px;
	}
}

/* main page */

#wpbdp-categories {
	clear: both;
}

.wpbdp-categories {
	padding-left: 20px;
	margin: 0;
}

.wpbdp-categories .cat-item {
	box-sizing: border-box;
	width: 50%;
	margin: 0 0 20px;
	float: left;
}

.wpbdp-categories .cat-item:nth-child(2n+1) {
	clear: left;
}

.wpbdp-categories .cat-item .cat-item {
	width: 100%;
	margin: 0;
}

.wpbdp-categories-tiny .cat-item {
	width: 100%;
	float: none;
}

.wpbdp-categories-tiny .cat-item:nth-child(2n+1) {
	clear: none;
}

@import "checkout.less";
@import "submit-listing.less";
@import "login.less";

.wpbdp-submit-page table.fee-options {
	width: 100%;
}

.wpbdp-submit-page table.fee-options th,
.wpbdp-submit-page table.fee-options td {
	text-align: center;
}
/* ... */

